Fixed text overflow for cliche tabs, made flush icon larger.

--- a/app/styles/overrides/_overrides.scss
+++ b/app/styles/overrides/_overrides.scss
@@ -22,6 +22,8 @@
 
     &.btn-flush-cliche {
       background-color: transparent;
+      padding: 4px 10px;
+      font-size: 20px;
     }
 
     &.btn-flush-pipeline,
